[gd_scene load_steps=10 format=3 uid="uid://fm4pshlxldd"]

[ext_resource type="PackedScene" uid="uid://nie1gx4wd1yq" path="res://scenes/office/office_tile_map.tscn" id="1_7d3xv"]
[ext_resource type="Script" path="res://scripts/my_office.gd" id="1_17vid"]
[ext_resource type="PackedScene" uid="uid://dnirqsybh7586" path="res://scenes/office/characters/office_player.tscn" id="2_1gj0c"]
[ext_resource type="AudioStream" uid="uid://dgo41klkfoc2n" path="res://assets/trapezoid.wav" id="2_rfec4"]
[ext_resource type="PackedScene" uid="uid://bwakp2pfegwpx" path="res://scenes/global/scene_transition_trigger.tscn" id="3_kbt7q"]
[ext_resource type="PackedScene" uid="uid://bgiuwib4vkehr" path="res://scenes/global/interaction_zone.tscn" id="6_7mx24"]
[ext_resource type="PackedScene" uid="uid://dh88cnnxdbyd1" path="res://scenes/office/my_office_safe.tscn" id="7_no78a"]

[sub_resource type="Gradient" id="Gradient_aj1v3"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_eja7d"]
gradient = SubResource("Gradient_aj1v3")
width = 128
height = 128
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[node name="MyOffice" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_17vid")
theme = ExtResource("2_rfec4")

[node name="OfficePlayer" parent="." instance=ExtResource("2_1gj0c")]
position = Vector2(0, 48)
camera_limit_left = -200
camera_limit_top = -200
camera_limit_right = 200
camera_limit_bottom = 200
max_zoom = 1.0

[node name="OfficeTileMap" parent="." instance=ExtResource("1_7d3xv")]
position = Vector2(-80, -64)
layer_0/tile_data = PackedInt32Array(131073, 262144, 0, 196609, 196608, 0, 262145, 131072, 0, 327681, 196608, 0, 393217, 131072, 0, 131074, 262144, 0, 196610, 131072, 0, 262146, 196608, 0, 327682, 131072, 0, 393218, 196608, 0, 131075, 262144, 0, 196611, 196608, 0, 262147, 131072, 0, 327683, 196608, 0, 131076, 262144, 0, 196612, 131072, 0, 262148, 196608, 0, 327684, 131072, 0, 393220, 196608, 0, 131077, 262144, 0, 196613, 196608, 0, 262149, 131072, 0, 327685, 196608, 0, 393221, 131072, 0, 131078, 262144, 0, 196614, 131072, 0, 262150, 196608, 0, 327686, 131072, 0, 393222, 196608, 0, 131079, 262144, 0, 196615, 196608, 0, 262151, 131072, 0, 327687, 196608, 0, 393223, 131072, 0, 131080, 262144, 0, 196616, 131072, 0, 262152, 196608, 0, 327688, 131072, 0, 393224, 196608, 0, 458756, 131072, 0, 458757, 196608, 0, 524293, 131072, 0, 524292, 196608, 0, 393219, 131072, 0)
layer_1/tile_data = PackedInt32Array(65537, 327680, 3, 65538, 327680, 3, 65539, 327680, 3, 65540, 327680, 3, 65541, 327680, 3, 65542, 327680, 3, 65543, 327680, 3, 65544, 327680, 3, 0, 262144, 0, 1, 262144, 0, 2, 262144, 0, 3, 262144, 0, 4, 262144, 0, 5, 262144, 0, 6, 262144, 0, 7, 262144, 0, 8, 262144, 0, 9, 262144, 0, 65545, 262144, 0, 131081, 262144, 0, 196617, 262144, 0, 327689, 262144, 0, 458761, 262144, 0, 65536, 262144, 0, 131072, 262144, 0, 196608, 262144, 0, 262144, 262144, 0, 327680, 262144, 0, 393216, 262144, 0, 458752, 262144, 0, 458753, 262144, 0, 458754, 262144, 0, 458755, 262144, 0, 458758, 262144, 0, 458759, 262144, 0, 458760, 262144, 0, 524288, 262144, 0, 589824, 262144, 0, 655360, 262144, 0, 720896, 262144, 0, 524289, 262144, 0, 589825, 262144, 0, 655361, 262144, 0, 720897, 262144, 0, 524290, 262144, 0, 589826, 262144, 0, 655362, 262144, 0, 720898, 262144, 0, 524291, 262144, 0, 589827, 262144, 0, 655363, 262144, 0, 720899, 262144, 0, 524294, 262144, 0, 589830, 262144, 0, 655366, 262144, 0, 720902, 262144, 0, 524295, 262144, 0, 589831, 262144, 0, 655367, 262144, 0, 720903, 262144, 0, 524296, 262144, 0, 589832, 262144, 0, 655368, 262144, 0, 720904, 262144, 0, 524297, 262144, 0, 589833, 262144, 0, 655369, 262144, 0, 720905, 262144, 0, 589828, 262144, 0, 655364, 262144, 0, 720900, 262144, 0, 589829, 262144, 0, 655365, 262144, 0, 720901, 262144, 0, 10, 262144, 0, 11, 262144, 0, 12, 262144, 0, 13, 262144, 0, 720906, 262144, 0, 720907, 262144, 0, 720908, 262144, 0, 720909, 262144, 0, 786432, 262144, 0, 786433, 262144, 0, 786434, 262144, 0, 786435, 262144, 0, 786436, 262144, 0, 786437, 262144, 0, 786438, 262144, 0, 786439, 262144, 0, 786440, 262144, 0, 786441, 262144, 0, 65546, 262144, 0, 131082, 262144, 0, 196618, 262144, 0, 262154, 262144, 0, 327690, 262144, 0, 458762, 262144, 0, 524298, 262144, 0, 589834, 262144, 0, 655370, 262144, 0, 786442, 262144, 0, 65547, 262144, 0, 131083, 262144, 0, 196619, 262144, 0, 262155, 262144, 0, 327691, 262144, 0, 458763, 262144, 0, 524299, 262144, 0, 589835, 262144, 0, 655371, 262144, 0, 786443, 262144, 0, 65548, 262144, 0, 131084, 262144, 0, 196620, 262144, 0, 262156, 262144, 0, 327692, 262144, 0, 458764, 262144, 0, 524300, 262144, 0, 589836, 262144, 0, 655372, 262144, 0, 786444, 262144, 0, 65549, 262144, 0, 131085, 262144, 0, 196621, 262144, 0, 262157, 262144, 0, 327693, 262144, 0, 458765, 262144, 0, 524301, 262144, 0, 589837, 262144, 0, 655373, 262144, 0, 786445, 262144, 0, 262153, 262144, 0, 65532, 262144, 0, 131068, 262144, 0, 196604, 262144, 0, 262140, 262144, 0, 327676, 262144, 0, 393212, 262144, 0, 458748, 262144, 0, 524284, 262144, 0, 589820, 262144, 0, 655356, 262144, 0, 720892, 262144, 0, 786428, 262144, 0, 851964, 262144, 0, 65533, 262144, 0, 131069, 262144, 0, 196605, 262144, 0, 262141, 262144, 0, 327677, 262144, 0, 393213, 262144, 0, 458749, 262144, 0, 524285, 262144, 0, 589821, 262144, 0, 655357, 262144, 0, 720893, 262144, 0, 786429, 262144, 0, 851965, 262144, 0, 65534, 262144, 0, 131070, 262144, 0, 196606, 262144, 0, 262142, 262144, 0, 327678, 262144, 0, 393214, 262144, 0, 458750, 262144, 0, 524286, 262144, 0, 589822, 262144, 0, 655358, 262144, 0, 720894, 262144, 0, 786430, 262144, 0, 851966, 262144, 0, 65535, 262144, 0, 131071, 262144, 0, 196607, 262144, 0, 262143, 262144, 0, 327679, 262144, 0, 393215, 262144, 0, 458751, 262144, 0, 524287, 262144, 0, 589823, 262144, 0, 655359, 262144, 0, 720895, 262144, 0, 786431, 262144, 0, 851967, 262144, 0, -196612, 262144, 0, -131076, 262144, 0, -65540, 262144, 0, -4, 262144, 0, -196611, 262144, 0, -131075, 262144, 0, -65539, 262144, 0, -3, 262144, 0, -196610, 262144, 0, -131074, 262144, 0, -65538, 262144, 0, -2, 262144, 0, -196609, 262144, 0, -131073, 262144, 0, -65537, 262144, 0, -1, 262144, 0, -262144, 262144, 0, -196608, 262144, 0, -131072, 262144, 0, -65536, 262144, 0, -262143, 262144, 0, -196607, 262144, 0, -131071, 262144, 0, -65535, 262144, 0, -262142, 262144, 0, -196606, 262144, 0, -131070, 262144, 0, -65534, 262144, 0, -262141, 262144, 0, -196605, 262144, 0, -131069, 262144, 0, -65533, 262144, 0, -262140, 262144, 0, -196604, 262144, 0, -131068, 262144, 0, -65532, 262144, 0, -262139, 262144, 0, -196603, 262144, 0, -131067, 262144, 0, -65531, 262144, 0, -262138, 262144, 0, -196602, 262144, 0, -131066, 262144, 0, -65530, 262144, 0, -262137, 262144, 0, -196601, 262144, 0, -131065, 262144, 0, -65529, 262144, 0, -262136, 262144, 0, -196600, 262144, 0, -131064, 262144, 0, -65528, 262144, 0, -262135, 262144, 0, -196599, 262144, 0, -131063, 262144, 0, -65527, 262144, 0, -262134, 262144, 0, -196598, 262144, 0, -131062, 262144, 0, -65526, 262144, 0, -262133, 262144, 0, -196597, 262144, 0, -131061, 262144, 0, -65525, 262144, 0, -262132, 262144, 0, -196596, 262144, 0, -131060, 262144, 0, -65524, 262144, 0, -262131, 262144, 0, -196595, 262144, 0, -131059, 262144, 0, -65523, 262144, 0, -393202, 262144, 0, -327666, 262144, 0, -262130, 262144, 0, -196594, 262144, 0, -131058, 262144, 0, -65522, 262144, 0, 14, 262144, 0, 65550, 262144, 0, 131086, 262144, 0, 196622, 262144, 0, 262158, 262144, 0, 327694, 262144, 0, 458766, 262144, 0, 524302, 262144, 0, 589838, 262144, 0, 655374, 262144, 0, 720910, 262144, 0, 786446, 262144, 0, 851982, 262144, 0, 917518, 262144, 0, -393201, 262144, 0, -327665, 262144, 0, -262129, 262144, 0, -196593, 262144, 0, -131057, 262144, 0, -65521, 262144, 0, 15, 262144, 0, 65551, 262144, 0, 131087, 262144, 0, 196623, 262144, 0, 262159, 262144, 0, 327695, 262144, 0, 458767, 262144, 0, 524303, 262144, 0, 589839, 262144, 0, 655375, 262144, 0, 720911, 262144, 0, 786447, 262144, 0, 851983, 262144, 0, 917519, 262144, 0, -327686, 262144, 0, -262150, 262144, 0, -327685, 262144, 0, -262149, 262144, 0, -327684, 262144, 0, -262148, 262144, 0, -327683, 262144, 0, -262147, 262144, 0, -327682, 262144, 0, -262146, 262144, 0, -327681, 262144, 0, -262145, 262144, 0, -393216, 262144, 0, -327680, 262144, 0, -393215, 262144, 0, -327679, 262144, 0, -393214, 262144, 0, -327678, 262144, 0, -393213, 262144, 0, -327677, 262144, 0, -393212, 262144, 0, -327676, 262144, 0, -393211, 262144, 0, -327675, 262144, 0, -393210, 262144, 0, -327674, 262144, 0, -393209, 262144, 0, -327673, 262144, 0, -393208, 262144, 0, -327672, 262144, 0, -393207, 262144, 0, -327671, 262144, 0, -393206, 262144, 0, -327670, 262144, 0, -393205, 262144, 0, -327669, 262144, 0, -393204, 262144, 0, -327668, 262144, 0, -393203, 262144, 0, -327667, 262144, 0, -196614, 262144, 0, -131078, 262144, 0, -65542, 262144, 0, -6, 262144, 0, 65530, 262144, 0, 131066, 262144, 0, 196602, 262144, 0, 262138, 262144, 0, 327674, 262144, 0, 393210, 262144, 0, 458746, 262144, 0, 524282, 262144, 0, 589818, 262144, 0, 655354, 262144, 0, 720890, 262144, 0, 786426, 262144, 0, 851962, 262144, 0, 917498, 262144, 0, 983034, 262144, 0, -196613, 262144, 0, -131077, 262144, 0, -65541, 262144, 0, -5, 262144, 0, 65531, 262144, 0, 131067, 262144, 0, 196603, 262144, 0, 262139, 262144, 0, 327675, 262144, 0, 393211, 262144, 0, 458747, 262144, 0, 524283, 262144, 0, 589819, 262144, 0, 655355, 262144, 0, 720891, 262144, 0, 786427, 262144, 0, 851963, 262144, 0, 917499, 262144, 0, 983035, 262144, 0, 917500, 262144, 0, 983036, 262144, 0, 917501, 262144, 0, 983037, 262144, 0, 917502, 262144, 0, 983038, 262144, 0, 917503, 262144, 0, 983039, 262144, 0, 851968, 262144, 0, 917504, 262144, 0, 851969, 262144, 0, 917505, 262144, 0, 851970, 262144, 0, 917506, 262144, 0, 851971, 262144, 0, 917507, 262144, 0, 851972, 262144, 0, 917508, 262144, 0, 851973, 262144, 0, 917509, 262144, 0, 851974, 262144, 0, 917510, 262144, 0, 851975, 262144, 0, 917511, 262144, 0, 851976, 262144, 0, 917512, 262144, 0, 851977, 262144, 0, 917513, 262144, 0, 851978, 262144, 0, 917514, 262144, 0, 851979, 262144, 0, 917515, 262144, 0, 851980, 262144, 0, 917516, 262144, 0, 851981, 262144, 0, 917517, 262144, 0, -524272, 262144, 0, -458736, 262144, 0, -393200, 262144, 0, -327664, 262144, 0, -262128, 262144, 0, -196592, 262144, 0, -131056, 262144, 0, -65520, 262144, 0, 16, 262144, 0, 65552, 262144, 0, 131088, 262144, 0, 196624, 262144, 0, 262160, 262144, 0, 327696, 262144, 0, 458768, 262144, 0, 524304, 262144, 0, 589840, 262144, 0, 655376, 262144, 0, 720912, 262144, 0, 786448, 262144, 0, 851984, 262144, 0, 917520, 262144, 0, 983056, 262144, 0, 1048592, 262144, 0, -524271, 262144, 0, -458735, 262144, 0, -393199, 262144, 0, -327663, 262144, 0, -262127, 262144, 0, -196591, 262144, 0, -131055, 262144, 0, -65519, 262144, 0, 17, 262144, 0, 65553, 262144, 0, 131089, 262144, 0, 196625, 262144, 0, 262161, 262144, 0, 327697, 262144, 0, 458769, 262144, 0, 524305, 262144, 0, 589841, 262144, 0, 655377, 262144, 0, 720913, 262144, 0, 786449, 262144, 0, 851985, 262144, 0, 917521, 262144, 0, 983057, 262144, 0, 1048593, 262144, 0, 1048568, 262144, 0, 1114104, 262144, 0, 1048569, 262144, 0, 1114105, 262144, 0, 1048570, 262144, 0, 1114106, 262144, 0, 1048571, 262144, 0, 1114107, 262144, 0, 1048572, 262144, 0, 1114108, 262144, 0, 1048573, 262144, 0, 1114109, 262144, 0, 1048574, 262144, 0, 1114110, 262144, 0, 1048575, 262144, 0, 1114111, 262144, 0, 983040, 262144, 0, 1048576, 262144, 0, 983041, 262144, 0, 1048577, 262144, 0, 983042, 262144, 0, 1048578, 262144, 0, 983043, 262144, 0, 1048579, 262144, 0, 983044, 262144, 0, 1048580, 262144, 0, 983045, 262144, 0, 1048581, 262144, 0, 983046, 262144, 0, 1048582, 262144, 0, 983047, 262144, 0, 1048583, 262144, 0, 983048, 262144, 0, 1048584, 262144, 0, 983049, 262144, 0, 1048585, 262144, 0, 983050, 262144, 0, 1048586, 262144, 0, 983051, 262144, 0, 1048587, 262144, 0, 983052, 262144, 0, 1048588, 262144, 0, 983053, 262144, 0, 1048589, 262144, 0, 983054, 262144, 0, 1048590, 262144, 0, 983055, 262144, 0, 1048591, 262144, 0, -458760, 262144, 0, -393224, 262144, 0, -327688, 262144, 0, -262152, 262144, 0, -196616, 262144, 0, -131080, 262144, 0, -65544, 262144, 0, -8, 262144, 0, 65528, 262144, 0, 131064, 262144, 0, 196600, 262144, 0, 262136, 262144, 0, 327672, 262144, 0, 393208, 262144, 0, 458744, 262144, 0, 524280, 262144, 0, 589816, 262144, 0, 655352, 262144, 0, 720888, 262144, 0, 786424, 262144, 0, 851960, 262144, 0, 917496, 262144, 0, 983032, 262144, 0, -458759, 262144, 0, -393223, 262144, 0, -327687, 262144, 0, -262151, 262144, 0, -196615, 262144, 0, -131079, 262144, 0, -65543, 262144, 0, -7, 262144, 0, 65529, 262144, 0, 131065, 262144, 0, 196601, 262144, 0, 262137, 262144, 0, 327673, 262144, 0, 393209, 262144, 0, 458745, 262144, 0, 524281, 262144, 0, 589817, 262144, 0, 655353, 262144, 0, 720889, 262144, 0, 786425, 262144, 0, 851961, 262144, 0, 917497, 262144, 0, 983033, 262144, 0, -458758, 262144, 0, -393222, 262144, 0, -458757, 262144, 0, -393221, 262144, 0, -458756, 262144, 0, -393220, 262144, 0, -458755, 262144, 0, -393219, 262144, 0, -458754, 262144, 0, -393218, 262144, 0, -458753, 262144, 0, -393217, 262144, 0, -524288, 262144, 0, -458752, 262144, 0, -524287, 262144, 0, -458751, 262144, 0, -524286, 262144, 0, -458750, 262144, 0, -524285, 262144, 0, -458749, 262144, 0, -524284, 262144, 0, -458748, 262144, 0, -524283, 262144, 0, -458747, 262144, 0, -524282, 262144, 0, -458746, 262144, 0, -524281, 262144, 0, -458745, 262144, 0, -524280, 262144, 0, -458744, 262144, 0, -524279, 262144, 0, -458743, 262144, 0, -524278, 262144, 0, -458742, 262144, 0, -524277, 262144, 0, -458741, 262144, 0, -524276, 262144, 0, -458740, 262144, 0, -524275, 262144, 0, -458739, 262144, 0, -524274, 262144, 0, -458738, 262144, 0, -524273, 262144, 0, -458737, 262144, 0, -524270, 262144, 0, -458734, 262144, 0, -393198, 262144, 0, -327662, 262144, 0, -262126, 262144, 0, -196590, 262144, 0, -131054, 262144, 0, -65518, 262144, 0, 18, 262144, 0, 65554, 262144, 0, 131090, 262144, 0, 196626, 262144, 0, 262162, 262144, 0, 327698, 262144, 0, 458770, 262144, 0, 524306, 262144, 0, 589842, 262144, 0, 655378, 262144, 0, 720914, 262144, 0, 786450, 262144, 0, -524269, 262144, 0, -458733, 262144, 0, -393197, 262144, 0, -327661, 262144, 0, -262125, 262144, 0, -196589, 262144, 0, -131053, 262144, 0, -65517, 262144, 0, 19, 262144, 0, 65555, 262144, 0, 131091, 262144, 0, 196627, 262144, 0, 262163, 262144, 0, 327699, 262144, 0, 458771, 262144, 0, 524307, 262144, 0, 589843, 262144, 0, 655379, 262144, 0, 720915, 262144, 0, 786451, 262144, 0, -524268, 262144, 0, -458732, 262144, 0, -393196, 262144, 0, -327660, 262144, 0, -262124, 262144, 0, -196588, 262144, 0, -131052, 262144, 0, -65516, 262144, 0, 20, 262144, 0, 65556, 262144, 0, 131092, 262144, 0, 458772, 262144, 0, 524308, 262144, 0, 589844, 262144, 0, 655380, 262144, 0, 720916, 262144, 0, 786452, 262144, 0, -524267, 262144, 0, -458731, 262144, 0, -393195, 262144, 0, -327659, 262144, 0, -262123, 262144, 0, -196587, 262144, 0, -131051, 262144, 0, -65515, 262144, 0, 21, 262144, 0, 65557, 262144, 0, 131093, 262144, 0, 458773, 262144, 0, 524309, 262144, 0, 589845, 262144, 0, 655381, 262144, 0, 720917, 262144, 0, 786453, 262144, 0, -524266, 262144, 0, -458730, 262144, 0, -393194, 262144, 0, -327658, 262144, 0, -262122, 262144, 0, -196586, 262144, 0, -131050, 262144, 0, -65514, 262144, 0, 22, 262144, 0, 65558, 262144, 0, 131094, 262144, 0, 458774, 262144, 0, 524310, 262144, 0, 589846, 262144, 0, 655382, 262144, 0, 720918, 262144, 0, 786454, 262144, 0, -524265, 262144, 0, -458729, 262144, 0, -393193, 262144, 0, -327657, 262144, 0, -262121, 262144, 0, -196585, 262144, 0, -131049, 262144, 0, -65513, 262144, 0, 23, 262144, 0, 65559, 262144, 0, 131095, 262144, 0, 458775, 262144, 0, 524311, 262144, 0, 589847, 262144, 0, 655383, 262144, 0, 720919, 262144, 0, 786455, 262144, 0, -524264, 262144, 0, -458728, 262144, 0, -393192, 262144, 0, -327656, 262144, 0, -262120, 262144, 0, -196584, 262144, 0, -131048, 262144, 0, -65512, 262144, 0, 24, 262144, 0, 65560, 262144, 0, 131096, 262144, 0, 196632, 262144, 0, 262168, 262144, 0, 327704, 262144, 0, 393240, 262144, 0, 458776, 262144, 0, 524312, 262144, 0, 589848, 262144, 0, 655384, 262144, 0, 720920, 262144, 0, 786456, 262144, 0, 851986, 262144, 0, 917522, 262144, 0, 983058, 262144, 0, 1048594, 262144, 0, 851987, 262144, 0, 917523, 262144, 0, 983059, 262144, 0, 1048595, 262144, 0, 851988, 262144, 0, 917524, 262144, 0, 983060, 262144, 0, 1048596, 262144, 0, 851989, 262144, 0, 917525, 262144, 0, 983061, 262144, 0, 1048597, 262144, 0, 851990, 262144, 0, 917526, 262144, 0, 983062, 262144, 0, 1048598, 262144, 0, 851991, 262144, 0, 917527, 262144, 0, 983063, 262144, 0, 1048599, 262144, 0, 851992, 262144, 0, 917528, 262144, 0, 983064, 262144, 0, 1048600, 262144, 0, 25, 262144, 0, 65561, 262144, 0, 131097, 262144, 0, 196633, 262144, 0, 262169, 262144, 0, 327705, 262144, 0, 393241, 262144, 0, 458777, 262144, 0, 524313, 262144, 0, 589849, 262144, 0, 655385, 262144, 0, 720921, 262144, 0, 786457, 262144, 0, 851993, 262144, 0, 917529, 262144, 0, 983065, 262144, 0, 26, 262144, 0, 65562, 262144, 0, 131098, 262144, 0, 196634, 262144, 0, 262170, 262144, 0, 327706, 262144, 0, 393242, 262144, 0, 458778, 262144, 0, 524314, 262144, 0, 589850, 262144, 0, 655386, 262144, 0, 720922, 262144, 0, 786458, 262144, 0, 851994, 262144, 0, 917530, 262144, 0, 983066, 262144, 0, 27, 262144, 0, 65563, 262144, 0, 131099, 262144, 0, 196635, 262144, 0, 262171, 262144, 0, 327707, 262144, 0, 393243, 262144, 0, 458779, 262144, 0, 524315, 262144, 0, 589851, 262144, 0, 655387, 262144, 0, 720923, 262144, 0, 786459, 262144, 0, 851995, 262144, 0, 917531, 262144, 0, 983067, 262144, 0, 28, 262144, 0, 65564, 262144, 0, 131100, 262144, 0, 196636, 262144, 0, 262172, 262144, 0, 327708, 262144, 0, 393244, 262144, 0, 458780, 262144, 0, 524316, 262144, 0, 589852, 262144, 0, 655388, 262144, 0, 720924, 262144, 0, 786460, 262144, 0, 851996, 262144, 0, 917532, 262144, 0, 983068, 262144, 0, 29, 262144, 0, 65565, 262144, 0, 131101, 262144, 0, 196637, 262144, 0, 262173, 262144, 0, 327709, 262144, 0, 393245, 262144, 0, 458781, 262144, 0, 524317, 262144, 0, 589853, 262144, 0, 655389, 262144, 0, 720925, 262144, 0, 786461, 262144, 0, 851997, 262144, 0, 917533, 262144, 0, 983069, 262144, 0, 30, 262144, 0, 65566, 262144, 0, 131102, 262144, 0, 196638, 262144, 0, 262174, 262144, 0, 327710, 262144, 0, 393246, 262144, 0, 458782, 262144, 0, 524318, 262144, 0, 589854, 262144, 0, 655390, 262144, 0, 720926, 262144, 0, 786462, 262144, 0, 851998, 262144, 0, 917534, 262144, 0, 983070, 262144, 0, 31, 262144, 0, 65567, 262144, 0, 131103, 262144, 0, 196639, 262144, 0, 262175, 262144, 0, 327711, 262144, 0, 393247, 262144, 0, 458783, 262144, 0, 524319, 262144, 0, 589855, 262144, 0, 655391, 262144, 0, 720927, 262144, 0, 786463, 262144, 0, 851999, 262144, 0, 917535, 262144, 0, 983071, 262144, 0, 32, 262144, 0, 65568, 262144, 0, 131104, 262144, 0, 196640, 262144, 0, 262176, 262144, 0, 327712, 262144, 0, 393248, 262144, 0, 458784, 262144, 0, 524320, 262144, 0, 589856, 262144, 0, 655392, 262144, 0, 720928, 262144, 0, 786464, 262144, 0, 852000, 262144, 0, 917536, 262144, 0, 983072, 262144, 0, 33, 262144, 0, 65569, 262144, 0, 131105, 262144, 0, 196641, 262144, 0, 262177, 262144, 0, 327713, 262144, 0, 393249, 262144, 0, 458785, 262144, 0, 524321, 262144, 0, 589857, 262144, 0, 655393, 262144, 0, 720929, 262144, 0, 786465, 262144, 0, 852001, 262144, 0, 917537, 262144, 0, 983073, 262144, 0, 34, 262144, 0, 65570, 262144, 0, 131106, 262144, 0, 196642, 262144, 0, 262178, 262144, 0, 327714, 262144, 0, 393250, 262144, 0, 458786, 262144, 0, 524322, 262144, 0, 589858, 262144, 0, 655394, 262144, 0, 720930, 262144, 0, 786466, 262144, 0, 852002, 262144, 0, 917538, 262144, 0, 983074, 262144, 0, 35, 262144, 0, 65571, 262144, 0, 131107, 262144, 0, 196643, 262144, 0, 262179, 262144, 0, 327715, 262144, 0, 393251, 262144, 0, 458787, 262144, 0, 524323, 262144, 0, 589859, 262144, 0, 655395, 262144, 0, 720931, 262144, 0, 786467, 262144, 0, 852003, 262144, 0, 917539, 262144, 0, 983075, 262144, 0, 36, 262144, 0, 65572, 262144, 0, 131108, 262144, 0, 196644, 262144, 0, 262180, 262144, 0, 327716, 262144, 0, 393252, 262144, 0, 458788, 262144, 0, 524324, 262144, 0, 589860, 262144, 0, 655396, 262144, 0, 720932, 262144, 0, 786468, 262144, 0, 852004, 262144, 0, 917540, 262144, 0, 983076, 262144, 0, 37, 262144, 0, 65573, 262144, 0, 131109, 262144, 0, 196645, 262144, 0, 262181, 262144, 0, 327717, 262144, 0, 393253, 262144, 0, 458789, 262144, 0, 524325, 262144, 0, 589861, 262144, 0, 655397, 262144, 0, 720933, 262144, 0, 786469, 262144, 0, 852005, 262144, 0, 917541, 262144, 0, 983077, 262144, 0, 38, 262144, 0, 65574, 262144, 0, 131110, 262144, 0, 196646, 262144, 0, 262182, 262144, 0, 327718, 262144, 0, 393254, 262144, 0, 458790, 262144, 0, 524326, 262144, 0, 589862, 262144, 0, 655398, 262144, 0, 720934, 262144, 0, 786470, 262144, 0, 852006, 262144, 0, 917542, 262144, 0, 983078, 262144, 0, 39, 262144, 0, 65575, 262144, 0, 131111, 262144, 0, 196647, 262144, 0, 262183, 262144, 0, 327719, 262144, 0, 393255, 262144, 0, 458791, 262144, 0, 524327, 262144, 0, 589863, 262144, 0, 655399, 262144, 0, 720935, 262144, 0, 786471, 262144, 0, 852007, 262144, 0, 917543, 262144, 0, 983079, 262144, 0, -524263, 262144, 0, -458727, 262144, 0, -393191, 262144, 0, -327655, 262144, 0, -262119, 262144, 0, -196583, 262144, 0, -131047, 262144, 0, -65511, 262144, 0, -524262, 262144, 0, -458726, 262144, 0, -393190, 262144, 0, -327654, 262144, 0, -262118, 262144, 0, -196582, 262144, 0, -131046, 262144, 0, -65510, 262144, 0, -524261, 262144, 0, -458725, 262144, 0, -393189, 262144, 0, -327653, 262144, 0, -262117, 262144, 0, -196581, 262144, 0, -131045, 262144, 0, -65509, 262144, 0, -524260, 262144, 0, -458724, 262144, 0, -393188, 262144, 0, -327652, 262144, 0, -262116, 262144, 0, -196580, 262144, 0, -131044, 262144, 0, -65508, 262144, 0, -524259, 262144, 0, -458723, 262144, 0, -393187, 262144, 0, -327651, 262144, 0, -262115, 262144, 0, -196579, 262144, 0, -131043, 262144, 0, -65507, 262144, 0, -524258, 262144, 0, -458722, 262144, 0, -393186, 262144, 0, -327650, 262144, 0, -262114, 262144, 0, -196578, 262144, 0, -131042, 262144, 0, -65506, 262144, 0, -524257, 262144, 0, -458721, 262144, 0, -393185, 262144, 0, -327649, 262144, 0, -262113, 262144, 0, -196577, 262144, 0, -131041, 262144, 0, -65505, 262144, 0, -524256, 262144, 0, -458720, 262144, 0, -393184, 262144, 0, -327648, 262144, 0, -262112, 262144, 0, -196576, 262144, 0, -131040, 262144, 0, -65504, 262144, 0, -524255, 262144, 0, -458719, 262144, 0, -393183, 262144, 0, -327647, 262144, 0, -262111, 262144, 0, -196575, 262144, 0, -131039, 262144, 0, -65503, 262144, 0, -524254, 262144, 0, -458718, 262144, 0, -393182, 262144, 0, -327646, 262144, 0, -262110, 262144, 0, -196574, 262144, 0, -131038, 262144, 0, -65502, 262144, 0, -524253, 262144, 0, -458717, 262144, 0, -393181, 262144, 0, -327645, 262144, 0, -262109, 262144, 0, -196573, 262144, 0, -131037, 262144, 0, -65501, 262144, 0, -524252, 262144, 0, -458716, 262144, 0, -393180, 262144, 0, -327644, 262144, 0, -262108, 262144, 0, -196572, 262144, 0, -131036, 262144, 0, -65500, 262144, 0, -524251, 262144, 0, -458715, 262144, 0, -393179, 262144, 0, -327643, 262144, 0, -262107, 262144, 0, -196571, 262144, 0, -131035, 262144, 0, -65499, 262144, 0, -524250, 262144, 0, -458714, 262144, 0, -393178, 262144, 0, -327642, 262144, 0, -262106, 262144, 0, -196570, 262144, 0, -131034, 262144, 0, -65498, 262144, 0, -524249, 262144, 0, -458713, 262144, 0, -393177, 262144, 0, -327641, 262144, 0, -262105, 262144, 0, -196569, 262144, 0, -131033, 262144, 0, -65497, 262144, 0, 1048601, 262144, 0, 1048602, 262144, 0, 1048603, 262144, 0, 1048604, 262144, 0, 1048605, 262144, 0, 1048606, 262144, 0, 1048607, 262144, 0, 1048608, 262144, 0, 1048609, 262144, 0, 1048610, 262144, 0, 1048611, 262144, 0, 1048612, 262144, 0, 1048613, 262144, 0, 1048614, 262144, 0, 1048615, 262144, 0)
layer_2/tile_data = PackedInt32Array(131076, 0, 2, 131077, 65536, 2, 65539, 131072, 4, 65542, 0, 4, 196613, 196608, 1, 131073, 262144, 3, 131074, 262144, 3, 131079, 262144, 3, 131080, 262144, 3, 131075, 196608, 3, 131078, 196608, 3)

[node name="SceneTransitionTrigger" parent="." instance=ExtResource("3_kbt7q")]
position = Vector2(-16, 64)
scale = Vector2(2, 1)
scene_to_load = "res://scenes/office/office.tscn"
player_load_position = Vector2(176, 32)
player_load_animation = "idle_down"

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
energy = 0.9
blend_mode = 1

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, -32)
energy = 0.6
texture = SubResource("GradientTexture2D_eja7d")

[node name="InteractionZoneComputer" parent="." instance=ExtResource("6_7mx24")]
position = Vector2(-12, -16)
scale = Vector2(1.52, 1)
interaction_name = &"my_office_computer"

[node name="InteractionZoneLeftBookcase" parent="." instance=ExtResource("6_7mx24")]
position = Vector2(-57, -16)
interaction_name = &"my_office_bookcase_history"
dialogue_scene = true

[node name="InteractionZoneRightBookcase" parent="." instance=ExtResource("6_7mx24")]
position = Vector2(40, -16)
interaction_name = &"my_office_bookcase_documentation"
dialogue_scene = true

[node name="InteractionZoneSafe" parent="." instance=ExtResource("6_7mx24")]
position = Vector2(16, -16)
interaction_name = &"my_office_safe"
dialogue_scene = true

[node name="MyOfficeSafe" parent="." instance=ExtResource("7_no78a")]
visible = false
acceptable_answers = Array[String](["1408", "0814"])
